--- a/Homework_1/res/css/style.css
+++ b/Homework_1/res/css/style.css
@@ -58,6 +58,19 @@ ul {
     background-color: #7ebeb6;
     color: #092747;
 }
+
+.flex-login {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    border-radius: 300px;
+    background-color: rgb(173, 170, 170);
+    background-origin: border-box;
+    padding: 20px;
+    border-radius: 25px;
+}
+
 .footer{
     background-color: rgb(173, 170, 170);
     text-align: center;
@@ -71,4 +84,5 @@ ul {
         /*flex-direction: row;*/
         justify-content: space-between;
     }
+    .flex-login
 }
