--- a/Homework_1/res/css/style.css
+++ b/Homework_1/res/css/style.css
@@ -82,7 +82,7 @@ body {
     margin: auto;
     max-width: 500px;
     max-height: max-content;
-
+}
 .footer{
     background-color: rgb(117, 115, 115);
     text-align: center;
