--- a/Homework_1/res/css/style.css
+++ b/Homework_1/res/css/style.css
@@ -1,6 +1,6 @@
 
 * {
-    font-family: sans-serif;
+    font-family: monospace;
     box-sizing: border-box;
     /*
        CSS comment
@@ -26,7 +26,7 @@ body {
     padding-top: .5em;
     padding-bottom: .5em;
     border: 1px solid #646174;
-    background-color: #a2ccea;
+    background-color: #a8a8a8;
     box-shadow: 0px 0px 14px 0px rgba(0, 0, 0, 0.75);
     border-radius: 10px;
     text-align: center;
@@ -72,7 +72,6 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    
     text-align: center;
     border-radius: 300px;
     background-color: rgb(173, 170, 170);
@@ -83,6 +82,9 @@ body {
     max-width: 500px;
     max-height: max-content;
 }
+
+
+
 .footer{
     background-color: rgb(117, 115, 115);
     text-align: center;
