--- a/Homework_1/res/css/style.css
+++ b/Homework_1/res/css/style.css
@@ -1,4 +1,3 @@
-
 * {
     font-family: monospace;
     box-sizing: border-box;
@@ -8,19 +7,22 @@
        If you set box-sizing: border-box; on an element, padding, and border are included in the width and height:
     */
 }
+
 ul {
     margin: 0;
     padding: 0;
     list-style: none;
 
 }
+
 body {
     line-height: 1.6;
     margin: 0;
-    height:100vh;
+    height: 100vh;
     display: flex;
     flex-direction: column;
 }
+
 .header {
     display: flex;
     padding-top: .5em;
@@ -32,21 +34,22 @@ body {
     text-align: center;
 
     /*display: flex;*/
-    
-    top: 0; /* Position the navbar at the top of the page */
+
+    top: 0;
+    /* Position the navbar at the top of the page */
     width: 100%;
-    
+
 }
 
 .nav {
     margin-left: -1px;
     margin-top: 5px;
     display: flex;
-    
-    
+
+
 }
 
-.nav li{
+.nav li {
     border-left: 1px solid rgb(0, 0, 0);
 }
 
@@ -56,9 +59,10 @@ body {
     color: #34495e;
     font-size: .99em;
     text-decoration: none;
-    
+
 }
-.logo{
+
+.logo {
     margin-right: 15px;
     margin-left: auto
 }
@@ -85,17 +89,15 @@ body {
 
 
 
-.footer{
+.footer {
     background-color: rgb(117, 115, 115);
     text-align: center;
     border-radius: 10px;
-    margin-top:auto; 
+    margin-top: auto;
     margin-bottom: 5px;
     margin-left: 5px;
     margin-right: 5px;
-    min-height:50px
-   
-    
+    min-height: 50px
 }
 
 
@@ -105,17 +107,19 @@ body {
         justify-content: space-between;
     }
 }
+
 @media (max-width: 800px) {
     .left_sidebar {
-    visibility: hidden;
-    
+        visibility: hidden;
+
     }
-    .right_sidebar{
+
+    .right_sidebar {
         visibility: hidden;
     }
 }
 
-.middle{
+.middle {
     display: flex;
     flex-direction: row;
     margin: 0px;
@@ -125,30 +129,51 @@ body {
 
 }
 
-.right_sidebar{
+.right_sidebar {
     background-color: rgb(173, 170, 170);
-    margin-right:0px;
+    margin-right: 0px;
     margin-left: auto;
     border-radius: 25px;
     min-width: 150px;
 }
-.middle_postbar{
+
+.middle_postbar {
     width: 80%;
     min-width: 350px;
 }
-.left_sidebar{
+
+.left_sidebar {
     border-radius: 25px;
     min-width: 150px;
     background-color: rgb(173, 170, 170);
     margin-right: auto;
-    margin-left: 0px;   
+    margin-left: 0px;
 }
 
-.post{
+.post {
     background-color: antiquewhite;
     margin: 10px;
 }
-.post_image{
+
+.post_image {
     width: 80%;
     height: auto;
+}
+
+.pbody {
+    resize: none;
+}
+
+form.add-post {
+    display: table;
+}
+
+.formfield * {
+    vertical-align: top;
+    display: table-cell;
+    padding: 10px;
+}
+
+.formfield {
+    display: table-row;
 }
