--- a/Homework_1/res/css/style.css
+++ b/Homework_1/res/css/style.css
@@ -148,6 +148,7 @@ body {
 .post {
     background-color: antiquewhite;
     margin: 10px;
+    padding: 10px;
 }
 
 .post_image {
@@ -171,4 +172,13 @@ form.add-post {
 
 .formfield {
     display: table-row;
+}
+
+.post_head{
+    display: flex;
+    flex-direction: row;
+}
+.post_head > p{
+    margin-left: auto;
+    margin-right: 10px ;
 }
