--- a/Homework_1/res/css/style.css
+++ b/Homework_1/res/css/style.css
@@ -18,10 +18,17 @@
 
 }
 body {
+    /* background-image: repeating-radial-gradient(red, yellow 10%, red); */
+    background-image: url('Homework_1\res\images\logohigh.png');
+    background-repeat: repeat; 
+    /* background-color: #cccccc; */
+    background-size: cover;
+    
+
     line-height: 1.6;
     margin: 0;
-    height: 100vh;
-    display: flex;
+    /* height: 100vh; */
+    /* display: flex; */
     flex-direction: column;
 }
 
@@ -30,7 +37,8 @@ body {
     padding-top: .5em;
     padding-bottom: .5em;
     border: 1px solid #646174;
-    background-color: #a8a8a8;
+    /* background-color: #ff0000; */
+    background-color: darkgreen;
     box-shadow: 0px 0px 14px 0px rgba(0, 0, 0, 0.75);
     border-radius: 10px;
     text-align: center;
@@ -40,6 +48,7 @@ body {
 }
 
 .nav {
+    font-weight: 900;
     margin-left: -1px;
     margin-top: 5px;
     display: flex;
@@ -48,7 +57,7 @@ body {
 }
 
 .nav li {
-    border-left: 1px solid rgb(0, 0, 0);
+    border-left: 1px solid black;
 }
 
 .nav a {
@@ -70,7 +79,7 @@ body {
     color: #092747;
 }
 
-.flex-login {
+.center_box {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -87,7 +96,7 @@ body {
 
 
 .footer {
-    background-color: rgb(117, 115, 115);
+    background-color: rgb(29, 0, 156);
     text-align: center;
     border-radius: 10px;
     margin-top: auto;
@@ -100,9 +109,9 @@ body {
     list-style: none;
 }
 
+/*  When screen width < n px :*/
 @media (min-width: 1000px) {
     .header {
-        /*flex-direction: row;*/
         justify-content: space-between;
     }
 }
@@ -129,7 +138,12 @@ body {
 }
 
 .right_sidebar {
-    background-color: rgb(173, 170, 170);
+    /* background-color: rgb(0, 0, 0); */
+    background-image: linear-gradient(rgb(0, 242, 250), rgb(7, 10, 241));
+    background-color: #cccccc;
+    background-size: cover;
+
+
     margin-right: 0px;
     margin-left: auto;
     border-radius: 25px;
@@ -142,23 +156,29 @@ body {
 }
 
 .left_sidebar {
+    background-image: linear-gradient(rgb(0, 242, 250), rgb(7, 10, 241));
+    background-color: #cccccc;
+    background-size: cover;
+
     border-radius: 25px;
     min-width: 150px;
-    background-color: rgb(173, 170, 170);
+    /* background-color: rgb(38, 0, 255); */
     margin-right: auto;
     margin-left: 0px;
 }
 
 .post {
-    background-color: antiquewhite;
+    background-color: black;
     margin: 10px;
     padding: 10px;
     border-radius: 25px;
+
 }
 
 .post_body {
+    color: rgb(37, 158, 0);    ;
     padding: 5px;
-    background-color: rgb(240, 226, 207);
+    background-color: black;
     border-radius: 25px;
 }
 
@@ -172,12 +192,42 @@ body {
 }
 .post_footer{
     padding-top: 5px;
+    display: flex;    
 }
+
 .post_image{
-    width: 100%;
-    height: auto;
-    max-height: 600px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     /* object-fit: contain; */
+}
+.post_image > img{
+    width: auto;
+    height: auto;
+    max-width: 100%;
+    max-height: 100%;
+}
+
+img.like_button{
+    padding-top: 5px;
+    padding-left: 5px;
+    width: auto;
+    height: auto;
+    max-width: 50px;
+    max-height: 50px;
+}
+
+
+button.like_button ~ p {
+    margin-right: 5px;
+    margin-left: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 5px;
+    background-color: red;
+    color: white;
+    border-radius: 10px;
+    vertical-align: middle;
 }
 
 /* Applies to the textarea immediately after the label */
